Fixing submenu items on primary nav for color and hover state.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-nav.css
@@ -9,7 +9,8 @@
 	}
 
 	& a,
-	& button:first-child {
+	& button:first-child,
+	& .sub-menu a {
 		background: none;
 		border: none;
 		color: var(--global-theme-font-primary);
@@ -117,4 +118,25 @@
 			color: var(--brand-primary);
 		}
 	}
+}
+
+.-dark .primary-nav .sub-menu {
+	& button,
+	& a {
+		color: var(--global-theme-font-tertiary-light);
+
+		&:hover,
+		&:focus {
+			color: var(--brand-primary);
+		}
+	}
+
+	& .current-menu-item {
+		position: relative;
+
+		& > a,
+		& > button:first-child {
+				color: var(--brand-primary);
+			}
+		}
 }
