Adding podcast thumbs and stacking for jacapps

--- a/themes/experience-engine/assets/styles/base/post-thumbnail.css
+++ b/themes/experience-engine/assets/styles/base/post-thumbnail.css
@@ -54,3 +54,11 @@
 	}
 
 }
+
+.jacapps .post-thumbnail a {
+	position: relative;
+}
+
+.jacapps .event-tile .post-thumbnail::before {
+	display: none;
+}
