--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -364,3 +364,12 @@
 	padding-top: 0;
 	padding-bottom: 0;
 }
+
+.jacapps .archive-tiles.-small .post-thumbnail,
+.jacapps .archive-tiles.-large .post-thumbnail {
+	margin-bottom: 0.5rem;
+}
+
+.jacapps.single-show .archive-tiles .post-title h3 {
+	margin-bottom: 1rem;
+}
