Moving abs position btn out of podcast-tile

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -266,12 +266,14 @@
 .archive,
 .home {
 	& .archive-tiles {
-		& .placeholder-audio {
+		& :not(.episode-tile) .placeholder-audio {
 			position: absolute;
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%);
+		}
 
+		& .placeholder-audio {
 			& .status button {
 				background-color: var(--brand-tertiary);
 				border-color: var(--brand-tertiary);
