Moving not to podcast-tile

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -281,7 +281,7 @@
 .archive,
 .home {
 	& .archive-tiles {
-		& :not(.episode-tile) .placeholder-audio {
+		& div:not(.podcast-tile) .placeholder-audio {
 			position: absolute;
 			top: 50%;
 			left: 50%;
