--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -30,7 +30,7 @@
 			display: none;
 		}
 		@media (--min-small-viewport) {
-			width: auto;
+			width: 100%;
 		}
 		@media (--min-xlarge-viewport) {
 			& .excerpt {
@@ -300,6 +300,7 @@
 		/* Revert placeholder for full podcast-tile */
 		& .podcast-tile {
 			& .placeholder-audio {
+				margin-top: 10px;
 				position: relative;
 				top: auto;
 				left: auto;
