--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -271,6 +271,8 @@
 
 			& > a {
 				color: inherit;
+				display: inline-block;
+				margin-bottom: 20px;
 				text-decoration: underline;
 			}
 		}
