--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -124,13 +124,14 @@
 		padding-bottom: 2rem;
 
 		&.-small [class$="-title"] h3 {
-			font-size: 1rem;
+			font-size: 14px;
 
 			& a {
 				font-weight: 400;
 			}
 
 			@media (--min-medium-viewport) {
+				font-size: 1rem;
 
 				& a {
 					font-weight: 700;
@@ -341,7 +342,7 @@
 			word-wrap: break-word;
 
 			& h3 {
-				font-size: 1rem;
+				font-size: 14px;
 				font-weight: 600;
 				margin-bottom: 0;
 
