Better thumbnail margins

--- a/themes/experience-engine/assets/styles/components/archive/archive-tile.css
+++ b/themes/experience-engine/assets/styles/components/archive/archive-tile.css
@@ -224,7 +224,11 @@
 
 		& .post-thumbnail {
 			flex: 0 1 100%;
-			margin-bottom: 1rem;
+			margin-bottom: 10px;
+
+			@media (--min-medium-viewport) {
+				margin-bottom: 1rem;
+			}
 		}
 
 		& .post-date {
