--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -613,11 +613,12 @@
 	height: 54px;
 	justify-content: center;
 	width: 54px;
+	opacity: .8;
 
 	&:focus,
 	&:hover {
 		outline: 0;
-		opacity: 0.8;
+		opacity: 1;
 	}
 
 	& svg {
@@ -658,4 +659,17 @@
 	@media(--min-medium-viewport) {
 		margin-top: 0;
 	}
+}
+
+
+.control-section .-live.LIVE_PAUSE .resume-btn,
+.control-section .-live.LIVE_PLAYING .pause-btn,
+.control-section .-live.LIVE_STOP .play-btn,
+.control-section .-live.LIVE_FAILED .play-btn,
+.control-section .-live.LIVE_BUFFERING .loading-btn,
+.control-section .-live.LIVE_CONNECTING .loading-btn,
+.control-section .-live.LIVE_RECONNECTING .loading-btn,
+.control-section .-live.STREAM_GEO_BLOCKED .play-btn,
+.control-section .-live.STATION_NOT_FOUND .play-btn {
+	opacity: 1;
 }
