--- a/themes/experience-engine/assets/styles/components/formats/post-format.css
+++ b/themes/experience-engine/assets/styles/components/formats/post-format.css
@@ -14,6 +14,13 @@
         top: 50%;
         transform: translateY(-50%);
         width: 64px;
+	    opacity: .8;
+
+		&:focus,
+		&:hover {
+			 outline: 0;
+			 opacity: 1;
+		 }
 
         & svg {
             fill: var(--brand-primary);
