--- a/themes/experience-engine/assets/styles/components/formats/post-format.css
+++ b/themes/experience-engine/assets/styles/components/formats/post-format.css
@@ -14,12 +14,12 @@
         top: 50%;
         transform: translateY(-50%);
         width: 64px;
-	    opacity: .7;
+	    opacity: var(--brand-play-opacity);
 
 		&:focus,
 		&:hover {
 			 outline: 0;
-			 opacity: 1;
+			 opacity: var(--brand-play-hover-opacity);
 		 }
 
         & svg {
