--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -613,12 +613,12 @@
 	height: 54px;
 	justify-content: center;
 	width: 54px;
-	opacity: .7;
+	opacity: var(--brand-play-opacity);
 
 	&:focus,
 	&:hover {
 		outline: 0;
-		opacity: 1;
+		opacity: var(--brand-play-hover-opacity);
 	}
 
 	& svg {
@@ -634,7 +634,7 @@
 	&:focus,
 	&:hover {
 		 outline: 0;
-		 opacity: .7;
+		 opacity: var(--brand-play-live-hover-opacity);
     }
 
 	& svg {
@@ -692,6 +692,6 @@
 	&:focus,
 	&:hover {
 		 outline: 0;
-		 opacity: .7;
+		 opacity: var(--brand-play-live-hover-opacity);
 	 }
 }
