--- a/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -129,6 +129,9 @@
 			margin-top: 0.5rem;
 			justify-content: space-between;
 			flex-wrap: wrap;
+			& .shop-now-button-meta{
+				margin-left: auto;
+			}
 			& .shop-now-button{
 				background: var(--brand-primary);
 				color: #fff;
@@ -138,9 +141,12 @@
 		}
 		& .share-wrap{
 			justify-content: flex-end;
-			margin:0.5rem 0 0.5rem;
-			@media (--min-medium-viewport) {
-				margin:-35px 0 0.5rem;
+			margin:0.5rem 0 1rem;
+			& .share{
+				margin-top: 0.5rem;
+				@media (--min-medium-viewport) {
+					margin-top: -35px;
+				}
 			}
 			& .label{
 				display: none;
