Remove seperate am_category, am_tag taxonomy for Affiliate marketing and now we are using common category,tag for affiliate marketing similar to gallery

--- a/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -5,12 +5,9 @@
 	padding: 0;
 }
 
-.post-tags-am {
+.post-tags {
 	& .post-tag-label {
 		color: #444444;
-	}
-	& .post-tag-items {
-		color: #202124;
 	}
 }
 
