Add Image code, get it now from field in admin side. Change share URL code for GA and social media.

--- a/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -33,6 +33,10 @@
 		margin-top: 1rem;
 	}
 
+	& .am_imagecode {
+		text-align: center;
+	}
+
 	& .placeholder-lazyimage {
 		overflow: hidden;
 		position: relative;
@@ -52,6 +56,7 @@
 
 	& .lazy-image {
 		background-size: contain;
+		background-color: transparent;
 		height: 100%;
 		left: 0;
 		position: absolute;
