--- a/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
+++ b/themes/experience-engine/assets/styles/components/affiliatemarketing/affiliatemarketing.css
@@ -35,6 +35,14 @@
 
 	& .am_imagecode {
 		text-align: center;
+
+		& .placeholder-lazyimage::before {
+			padding-top: 0px;
+		}
+
+		& .lazy-image {
+			display: none;
+		}
 	}
 
 	& .placeholder-lazyimage {
