Convert to Brad's test GAM unit. Leverage Stations Component for resuming Stream.

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -179,8 +179,7 @@
 
 	& .controls-progress {
 		left: 0;
-		position: absolute;
-		bottom: 8px;
+		position: relative;
 		width: 100%;
 		z-index: 9;
 
@@ -264,10 +263,15 @@
 		}
 	}
 
+	& .controls-recent.-podcast {
+		  display: none;
+    }
+
 	& .controls-recent {
 
 		& button {
 			display: none;
+		    margin-bottom: .5rem;
 
 			@media(--min-medium-viewport) {
 				display: flex;
@@ -564,9 +568,9 @@
 
 		& .-progress {
 			align-self: center;
-			margin: 0 10px;
+			margin: 0 10px 0 0;
 			position: relative;
-			width: 100%;
+			width: 84px;
 		}
 	}
 
