--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -566,14 +566,25 @@ display: none;
 	& .time {
 		display: none;
 
-		&.-desktop {
+		&.-desktop4digits {
 			@media(--min-medium-viewport) {
 				align-items: center;
 				display: inline-flex;
 				font-size: .675rem;
 				margin-top: 3px;
 				margin-right: 10px;
-				width: 2.2rem;
+				width: 1.75rem;
+			}
+		}
+
+		&.-desktop6digits {
+			@media(--min-medium-viewport) {
+				align-items: center;
+				display: inline-flex;
+				font-size: .675rem;
+				margin-top: 3px;
+				margin-right: 10px;
+				width: 2.75rem;
 			}
 		}
 	}
@@ -586,6 +597,8 @@ display: none;
 }
 
 .status {
+    min-width: 80px;
+
 	& button {
 		background: transparent;
 		border: 2px solid var(--brand-primary);
