Detect IOS13+ iPads as MacIntel with Touchscreen.

--- a/themes/experience-engine/assets/styles/components/player/controls.css
+++ b/themes/experience-engine/assets/styles/components/player/controls.css
@@ -178,7 +178,7 @@
 			font-weight: 500;
 			letter-spacing: 0.01em;
 			margin-right: 0.5rem;
-			padding: 0.07rem 0.25rem;
+			padding: 0 0.07rem 0 0.25rem;
 			position: relative;
 			text-transform: uppercase;
 			top: -1px;
