Debug logic for IMA.

--- a/themes/experience-engine/assets/styles/components/player/ads.css
+++ b/themes/experience-engine/assets/styles/components/player/ads.css
@@ -39,6 +39,21 @@
 	}
 }
 
+.gam-preroll-player {
+	background-color: var(--global-black);
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 0%);
+
+@media (--min-medium-viewport) {
+	min-width: 640px;
+}
+
+@media (--max-medium-viewport) {
+	width: 92%;
+}
+}
+
 .preroll-notification {
 	background-color: var(--global-black);
 	color: var(--global-white);
