--- a/themes/experience-engine/assets/styles/components/player/ads.css
+++ b/themes/experience-engine/assets/styles/components/player/ads.css
@@ -13,6 +13,24 @@
 	}
 }
 
+.gampreroll-wrapper {
+	display: none;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 100;
+
+	&.-active {
+		 display: block;
+	 }
+}
+
+.gampreroll-shade {
+	background-color: rgba(0, 0, 0, .75);
+}
+
 .preroll-container {
 	height: 0;
 	max-width: 100%;
