--- a/themes/experience-engine-v2/assets/styles/components/player/controls.css
+++ b/themes/experience-engine-v2/assets/styles/components/player/controls.css
@@ -3,7 +3,6 @@
 	box-shadow: inset 0px -2px 2px rgba(0, 0, 0, 0.2),
 				inset 0px 2px 0px rgba(255, 255, 255, 0.25);
 	display: flex;
-	height: 90px;
 	position: relative;
 
 	@media(--max-medium-viewport) {
@@ -37,11 +36,9 @@
     }
 
 	& div.button-holder.-live {
-		margin-top: -10px;
 	}
 
 	& div.button-holder.-podcast {
-		margin-top: -10px;
 	}
 
 	& .control-section,
@@ -593,14 +590,13 @@ display: none;
 }
 
 .status {
-    min-width: 80px;
 
 	& button {
 		background: transparent;
 		border: 2px solid var(--brand-primary);
 		border-radius: 50%;
 		padding: 0;
-	    margin: 0 .75rem 0 1rem
+	    margin: 0;
 	}
 
 	& svg {
