--- a/themes/experience-engine-v2/assets/styles/components/player/controls.css
+++ b/themes/experience-engine-v2/assets/styles/components/player/controls.css
@@ -587,6 +587,11 @@ display: none;
 	position: absolute;
 }
 
+#player-button-div > div.controls > div > div > button > svg {
+	width: 100%;
+	height: 100%;
+}
+
 .status {
 
 	& button {
@@ -646,7 +651,6 @@ display: none;
 	& svg {
 		fill: var(--brand-tertiary);
 		max-height: 31px;
-		transform: translateX(10%);
 	}
 }
 
