--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -134,8 +134,8 @@
 		      height:66px;
 		      line-height:66px;
 		      font-weight:700;
-		  		& svg{
-					height:33px;
+				& #player-button-div > div.controls > div > div > button {
+				    height:33px;
 					width:33px;
 					margin-right:3px;
 					fill:#fff;
@@ -145,8 +145,8 @@
 					padding: 0px 5px;
 					height: 57px;
 					line-height: 57px;
-					& svg{
-						height:25px;
+					& #player-button-div > div.controls > div > div > button {
+					    height:25px;
 						width:25px;
 						fill:#ededed !important;
 					  }
@@ -160,7 +160,7 @@
 		  }
 		& > div {
 			  position: absolute;
-			  z-index: 999;
+			  z-index: 99;
 			  display: none;
 			  right: 0px;
 			  left: auto;
