--- a/themes/experience-engine-v2/assets/styles/components/player/live-player.css
+++ b/themes/experience-engine-v2/assets/styles/components/player/live-player.css
@@ -77,7 +77,7 @@
 	transition: color .25s ease-in-out;
 	text-transform: uppercase;
 	&:hover {
-	 	color: var(--brand-tertiary);
+		 color:var(--global-theme-font-secondary) !important;
     }
 	& img {
   		height: 50px;
