--- a/themes/experience-engine-v2/assets/styles/components/ads/top-scrolling.css
+++ b/themes/experience-engine-v2/assets/styles/components/ads/top-scrolling.css
@@ -1,6 +1,7 @@
 .top-scrolling-container {
-	background-color: var(--global-theme-secondary);
+	background-color: white;
 	position: fixed;
+	margin-top: 1.3rem;
 	left: 0;
 	right: 0;
 	z-index: 1;
