--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -151,7 +151,7 @@
 	display: inline-block;
 	& > #listen-live-button {
 	  padding: 0px 8px;
-	  color: #fff !important;
+	  color: var(--brand-text-color);
 	  text-decoration: none;
 	  border: 1px solid var(--brand-primary);
 	  cursor: pointer;
@@ -210,7 +210,7 @@
 	  /* opacity: 0;
 	   height: 0;
 	   */
-	  color: #2c2e33;
+	  color: var(--brand-text-color);
 	  @media(--max-medium-viewport) {
 		width: 100vw !important;
 	  }
@@ -235,7 +235,7 @@
 	  }
 	  & a {
 		text-decoration: none;
-		color: #2c2e33;
+		color: var(--brand-text-color);
 		font-size: 14px;
 		padding-right: 10px;
 		line-height: 1.2;
@@ -275,7 +275,7 @@
 			font-size:16px;
 		  }
 		  & > span {
-			color: #2c2e33;
+			color: var(--brand-text-color);
 			font-size: 14px;
 			padding-right: 10px;
 			line-height: 1.2;
