--- a/themes/experience-engine/assets/styles/components/stn.css
+++ b/themes/experience-engine/assets/styles/components/stn.css
@@ -11,20 +11,20 @@
 	}
 }
 
-.s2nheadshow::after {
-	content: "";
-	display: block;
-	margin-top: 1rem;
-	border-top: 1px solid lightgray;
-}
-
-.s2nheadshow::after {
+.s2nheadshow::before {
 	content: "Have you seen this?";
 	font-weight: bold;
 	margin-bottom: 1rem;
 	padding-top: 1rem;
 	border-top: 1px solid lightgray;
 	display: block;
+}
+
+.s2nheadshow::after {
+	content: "";
+	display: block;
+	margin-top: 1rem;
+	border-top: 1px solid lightgray;
 }
 
 .s2nSmartPlayer[style]:not(.s2nBelowViewport) {
