--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -495,6 +495,7 @@
 						  height:auto;
 						  max-height:unset;
 						  min-height:unset;
+						  display: none;
 						}
 					  }
 					  & .rpwwt-post-title{
