--- a/themes/experience-engine-v2/assets/styles/main.css
+++ b/themes/experience-engine-v2/assets/styles/main.css
@@ -9,6 +9,7 @@
 @import "base/wp";
 @import "base/media";
 @import "base/tables";
+@import "base/whiz";
 
 @import "components/section/section-header";
 
@@ -96,4 +97,4 @@
 
 @import "utilities/display";
 
-@import "../../node_modules/swiper/dist/css/swiper.css"
+@import "../../node_modules/swiper/dist/css/swiper.css";
