--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -150,6 +150,31 @@
 		}
 	  }
 	}
+	& .mobile-head-social{
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		padding: 15px 14px;
+		position: relative;
+		@media(--min-x2large-viewport) {
+			display:none !important;
+		}
+		& a{
+		  display: block;
+		  height: 25px;
+		  width: 25px;
+		  background: #f5f5f5;
+		  color: #333;
+		  text-align: center;
+		  line-height: 1;
+		  border-radius: 50%;
+		  margin: 4px 8px;
+		  padding:3px 0;
+		  & svg{
+			fill: var(--brand-header-icons-color);
+		  }
+		}
+	}
   }
   & .listen-dropdown {
 	position: relative;
@@ -333,6 +358,56 @@
 		padding-left:20px;
 	  }
 	} */
+  }
+  & .mobile-search-form {
+	padding: 15px 14px;
+	position: relative;
+	@media(--min-x2large-viewport) {
+		display:none !important;
+	}
+	& input[type="search"] {
+		background-color: transparent;
+		border: none;
+		border-bottom: 1px solid var(--global-mercury);
+		color: var(--global-theme-font-tertiary);
+		font-size: 1rem;
+		font-weight: 500;
+		padding: .6667rem 1rem .6667rem 1.6rem;
+		width: 100%;
+
+		@media(--min-medium-viewport) {
+			font-size: .7778rem;
+		}
+
+		&::-webkit-input-placeholder {
+			color: var(--global-silver-chalice);
+			font-size: 0.875rem;
+			font-weight: 500;
+		}
+
+		&:focus {
+			border-bottom: 1px solid var(--brand-secondary);
+			outline: 0;
+
+			&::-webkit-input-placeholder {
+				color: var(--global-theme-font-tertiary);
+			}
+		}
+	}
+
+	& button[type="submit"] {
+		background-color: transparent;
+		border: none;
+		color: var(--brand-secondary);
+		left: 17px;
+		padding: 0;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 14px;
+		vertical-align: middle;
+		display: flex;
+	}
   }
   & .top-primarynav {
 	margin: 0px;
