--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -143,7 +143,7 @@
 		  line-height: 1;
 		  border-radius: 50%;
 		  margin: 0 8px;
-		  padding:3px 0;
+		  padding:0;
 		  & svg{
 			fill: var(--brand-header-icons-color);
 		  }
