--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -169,7 +169,7 @@
 		  line-height: 1;
 		  border-radius: 50%;
 		  margin: 4px 8px;
-		  padding:3px 0;
+		  padding:0;
 		  & svg{
 			fill: var(--brand-header-icons-color);
 		  }
@@ -571,6 +571,7 @@
 						width:100%;
 						max-height:15vw;
 						min-height:15vw;
+						object-fit: cover;
 						@media(--max-medium-viewport) {
 						  height:auto;
 						  max-height:unset;
