--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -554,13 +554,14 @@
 				  & li{
 					width:18vw;
 					/* padding-right:20px; */
-					margin-right: 5vw;
+					margin-right: 3vw;
 					@media(--max-x2large-viewport) {
 					  width:100%;
 					  margin-right:0;
 					}
 					&:last-child{
 					  padding-right:0;
+					  margin-right:0;
 					}
 					& a{
 					  padding:0;
@@ -582,9 +583,20 @@
 						}
 					  }
 					  & .rpwwt-post-title{
-						font-size:20px;
+						font-size:1rem;
 						margin-top:10px;
 						text-align:left;
+						font-family: var(--global-font-family-primary);
+						font-weight:700;
+						line-height: 1.308em;
+						max-height: 5.216em;
+						text-overflow: ellipsis;
+						word-wrap: break-word;
+						overflow: hidden;
+						@media(--max-medium-viewport) {
+							font-weight: 400;
+							font-size:14px;
+						}
 					  }
 					}
 				  }
