--- a/themes/experience-engine-v2/assets/styles/components/player/controls.css
+++ b/themes/experience-engine-v2/assets/styles/components/player/controls.css
@@ -712,3 +712,112 @@ display: none;
 		 opacity: var(--brand-play-live-hover-opacity);
 	 }
 }
+
+.ll-top-container {
+	justify-content: space-between;
+	& .ll-volume-control {
+		display: flex;
+
+		& button {
+			&:focus,
+			&:hover {
+				outline: 0;
+			}
+		}
+
+		& .button-holder {
+		align-items: center;
+		box-sizing: border-box;
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: space-between;
+		position: relative;
+
+		& button:not(.play-btn, .pause-btn, .resume-btn, .loading-btn) {
+			background: transparent;
+			border: 0;
+			cursor: pointer;
+		}
+		}
+
+		& .controls-volume {
+			display: none;
+			height: 22px;
+			position: relative;
+			z-index: 1;
+			min-width: 120px;
+			margin-top: 4px;
+			margin-bottom: 4px;
+
+			@media(--min-medium-viewport) {
+				display: flex;
+			}
+
+			& button {
+				display: none;
+
+				@media(--min-medium-viewport) {
+					display: block;
+				}
+
+				& svg path[fill] {
+					fill: var(--global-theme-font-primary);
+				}
+
+				& svg path[stroke] {
+					stroke: var(--global-theme-font-primary);
+				}
+
+			}
+
+			& button:hover,
+			& button:focus {
+				& svg path {
+					transition: fill 250ms ease-in-out,
+								stroke 250ms ease-in-out;
+				}
+			}
+
+			& button:focus {
+				outline: 0;
+			}
+
+			& .ee-range-input-slider {
+				left: 2rem;
+				right: 1rem;
+				opacity: 0;
+				position: absolute;
+				transition: visibility 250ms ease-in-out,
+							opacity 250ms ease-in-out;
+				top: 8px;
+				visibility: hidden;
+
+				& input[type="range"]::-webkit-slider-thumb {
+					-webkit-appearance: none;
+					border: none;
+					height: 12px;
+					width: 12px;
+					border-radius: 50%;
+					background: var(--brand-button-color);
+					margin-top: -3.5px;
+					z-index: 400;
+				}
+
+				& input[type=range]::-webkit-slider-runnable-track {
+					  background: var(--brand-text-color);
+					  border: none;
+					  border-radius: 3px;
+				  }
+
+				&.-volume-visible {
+					opacity: 1;
+					visibility: visible;
+				}
+
+				& .pre-bar {
+					background: var(--brand-music-control-color);
+				}
+			}
+		}
+	}
+}
