hide image caption/description

--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -591,6 +591,9 @@
 						  max-width: 100%;
 						  padding: 0;
 						}
+						&.wp-caption-text{
+						  display: none;
+						 }
 					}
 				  }
 			  }
