Fix ui issue from megamenu recent posts styling

--- a/themes/experience-engine-v2/assets/styles/page/header.css
+++ b/themes/experience-engine-v2/assets/styles/page/header.css
@@ -568,6 +568,7 @@
 				& ul.mega-sub-menu{
 					  padding: 10px 10px 10px !important;
 					  float: left;
+					  width: 100%;
 					& li.widget_media_image{
 					  width: 18vw;
 					  margin-right: 4vw;
