Leverage css for default height. Remove scrolling from loaded page saga.

--- a/themes/experience-engine-v2/assets/styles/components/ads/top-scrolling.css
+++ b/themes/experience-engine-v2/assets/styles/components/ads/top-scrolling.css
@@ -7,3 +7,11 @@
 	z-index: 1;
 }
 
+#div-top-scrolling-slot {
+	height: var(--ad_leaderboard_initial_height);
+}
+
+#inner-content {
+	margin-top: var(--ad_leaderboard_initial_height);
+}
+
